infra/kustomize/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: public
      namespace: cilium-system
  hostnames:
    - grafana.62a.quanianitis.com
  rules:
    - backendRefs:
        - name: grafana
          port: 80
